played with tool

--- a/index.html
+++ b/index.html
@@ -15,12 +15,26 @@
 <!-- html is inject -->
 <script>
     let canvasBoard = document.querySelector("canvas");
-    canvasBoard.height = window.innerHeight;
-    canvasBoard.width = window.innerWidth;
+    // canvasBoard.height = window.innerHeight;
+    // canvasBoard.width = window.innerWidth;
+    canvasBoard.height = 500;
+    canvasBoard.width = 600;
     //this line gives tool to draw on that canvas
     let tool = canvasBoard.getContext("2d");
     //rectangle build
+    tool.fillStyle = "black";
+    //to give colour to fill
     tool.fillRect(0, 0, 200, 200);
+    //change colour of stroke rect
+    tool.strokeStyle = "red";
+    //give boundary of rect i.e. it will draw a rect but not fill it with colour.
+    tool.strokeRect(50,50,200,200);
+    //rectangle build
+     tool.fillStyle = "yellow";
+    //to give colour to fill
+    tool.fillRect(40, 30, 120, 100);
+    
+    
 
 </script>
 
