line draw using position

--- a/index.html
+++ b/index.html
@@ -9,23 +9,42 @@
         body{
             margin: 0px;
         }
+
+        .fas {
+            font-size: 2rem;
+            margin-right: 30px;
+            margin-left: 30px;
+        }
     </style>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
 </head>
 <body>
     <!-- <h1>Canvas example</h1> -->
+    <!-- <i class="fas fa-square"></i>
+    <i class="fas fa-grip-lines-vertical"></i> -->
     <!-- Drawing Board-->
     <canvas></canvas>
     
 </body>
 <!-- html is inject -->
 <script>
+
+
     let canvasBoard = document.querySelector("canvas");
+    // let rectTool = document.querySelector(".fa-square");
+    // let lineTool = document.querySelector(".fa-grip-lines-vertical");
+    let cTool = "rectTool";
+
+    //changing canvas ki default height
     canvasBoard.height = window.innerHeight;
     canvasBoard.width = window.innerWidth;
+
+    
     // canvasBoard.height = 500;
     // canvasBoard.width = 600;
     // //this line gives tool to draw on that canvas
     let tool = canvasBoard.getContext("2d");
+    let body = document.querySelector("body");
     // //rectangle build
     // tool.fillStyle = "black";
     // //to give colour to fill
@@ -39,7 +58,7 @@
     // //to give colour to fill
     // tool.fillRect(40, 30, 120, 100);
 
-   let body = document.querySelector("body");
+  
 
    let iX, fX, iY, fY;
 
@@ -48,7 +67,8 @@
     //    console.log(e);
      iX = e.clientX;
      iY = e.clientY;
-    console.log(iX, iY);
+    // console.log(iX, iY);
+
    })
 
    //to get the positions when user leaves the mouse button
@@ -60,7 +80,12 @@
     let width = fX-iX;
    let height = fY - iY;
 
-   tool.strokeRect(iX,iY,width, height);
+//    tool.strokeRect(iX,iY,width, height);
+tool.beginPath();
+            tool.moveTo(iX, iY);
+            tool.lineTo(fX, fY);
+            tool.stroke();
+            console.log("Pencil tool is pending")
 
    })
   
