--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             margin-left: 30px;
         }
     </style>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- <h1>Canvas example</h1> -->
-    <!-- <i class="fas fa-square"></i>
-    <i class="fas fa-grip-lines-vertical"></i> -->
+    <i class="fas fa-square"></i>
+    <i class="fas fa-grip-lines-vertical"></i>
     <!-- Drawing Board-->
     <canvas></canvas>
     
@@ -31,8 +31,8 @@
 
 
     let canvasBoard = document.querySelector("canvas");
-    // let rectTool = document.querySelector(".fa-square");
-    // let lineTool = document.querySelector(".fa-grip-lines-vertical");
+    let rectTool = document.querySelector(".fa-square");
+    let lineTool = document.querySelector(".fa-grip-lines-vertical");
     let cTool = "rectTool";
 
     //changing canvas ki default height
@@ -68,6 +68,7 @@
      iX = e.clientX;
      iY = e.clientY;
     // console.log(iX, iY);
+    
 
    })
 
