--- a/index.html
+++ b/index.html
@@ -16,20 +16,27 @@
             margin-left: 30px;
         }
 
+        .iconPallete{
+            background-color: aliceblue;
+            height: 40px;
+        }
+
        input{
-           border-radius: 50%;
+           height: 50px;
+           padding: 0;
+           border-radius: 50%
+
        }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- <h1>Canvas example</h1> -->
-    <i class="fas fa-square"></i>
-    <i class="fas fa-grip-lines-vertical"></i>
-    <button class="colorRed">Red</button>
-    <button class="colorGreen">Green</button>
-    <button class="colorBlue">Blue</button>
-    <input type="color" value="#ff0000" id="colorWell">
+    <div class="iconPallete">
+        <i class="fas fa-square"></i>
+        <i class="fas fa-grip-lines-vertical"></i>
+        <input type="color" value="#ff0000" id="colorWell">
+    </div>
     <!-- Drawing Board-->
     <canvas></canvas>
     
@@ -42,6 +49,7 @@
     let rectTool = document.querySelector(".fa-square");
     let lineTool = document.querySelector(".fa-grip-lines-vertical");
 
+
     // let redColor = document.querySelector(".colorRed");
     // let greenColor = document.querySelector(".colorGreen");
     // let blueColor = document.querySelector(".colorBlue");
@@ -50,15 +58,12 @@
     let cTool = "rectTool";
 
     // let colorTool = "redColor";
-
     // redColor.addEventListener("click", function(){
     //     colorTool = "redColor";
     // })
-
     // greenColor.addEventListener("click", function(){
     //     colorTool = "greenColor";
     // })
-
     // blueColor.addEventListener("click", function(){
     //     colorTool = "blueColor";
     // })
@@ -83,11 +88,14 @@
 
    let iX, fX, iY, fY;
 
+   let drawingMode = false;
+
    //to get the positions when user presses the mouse
    body.addEventListener("mousedown", function(e){
     //    console.log(e);
      iX = e.clientX;
      iY = e.clientY;
+     drawingMode = true;
     // console.log(iX, iY);    
 
    })
@@ -98,31 +106,59 @@
      fX = e.clientX;
      fY = e.clientY;
     // console.log(fX, fY);
-    let width = fX-iX;
-   let height = fY - iY;
+//     let width = fX-iX;
+//    let height = fY - iY;
 
-//    if(colorTool == "redColor"){
-//        tool.strokeStyle = "red";
-//    }else if(colorTool == "greenColor"){
-//        tool.strokeStyle = "green";
-//    }else{
-//        tool.strokeStyle = "blue";
-//    }
+// //    if(colorTool == "redColor"){
+// //        tool.strokeStyle = "red";
+// //    }else if(colorTool == "greenColor"){
+// //        tool.strokeStyle = "green";
+// //    }else{
+// //        tool.strokeStyle = "blue";
+// //    }
 
-   tool.strokeStyle = colorChoose.value;
+//    tool.strokeStyle = colorChoose.value;
+// //    tool.lineWidth = 5;
 
-   if(cTool == "rectTool"){
-       tool.strokeRect(iX, iY, width, height);
-   } else {       
-       //    tool.strokeRect(iX,iY,width, height);
-       tool.beginPath();
+//    if(cTool == "rectTool"){
+//        tool.strokeRect(iX, iY, width, height);
+//    } else {       
+//        //    tool.strokeRect(iX,iY,width, height);
+//        tool.beginPath();
+//        tool.moveTo(iX, iY);
+//        tool.lineTo(fX, fY);
+//        tool.stroke();
+//     //    console.log("Pencil tool is pending");
+//     }
+
+drawingMode = false;
+
+   }) 
+   
+   
+
+
+
+
+
+
+   //pencil tool
+   body.addEventListener("mousemove", function(e){
+
+    if(drawingMode == false){
+        return;
+    }
+    tool.strokeStyle = colorChoose.value;
+       fX = e.clientX;
+       fY= e.clientY;
+    tool.beginPath();
        tool.moveTo(iX, iY);
        tool.lineTo(fX, fY);
        tool.stroke();
-    //    console.log("Pencil tool is pending");
-    }
+       iX = fX;
+       iY = fY;
+   })
 
-   })   
     
 
 </script>
